# Lightwell

Backned/: .gitignore  main.py  pyproject.toml
frontend/: GEMINI.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: config.css  globals.css  layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/(common)/dashboard/: page.tsx
frontend/src/app/(common)/temp/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/home/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/components/: GlassIcons.tsx  app-header.tsx  app-sidebar.tsx  notification-list.tsx  tasklist.tsx
frontend/src/features/auth/components/: auth-layout.tsx  login_form.tsx  signup_form.tsx
frontend/src/features/common/store/: theme_toggle.ts
frontend/src/features/masonary-grid/: grid.tsx
frontend/src/features/masonary-grid/components/: image-popover.tsx
