[project]
name = "lightwell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.124.4",
    "poethepoet>=0.38.0",
]

[tool.poe.tasks]
run = "uvicorn app.main:app"
srun = "doppler run -- uvicorn app.main:app"
